// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic client > rendering & text > basic operations 1`] = `
<div>
  <div>
    0
  </div>
  <div>
    2
  </div>
  <div>
    5
  </div>
  <div>
    2
  </div>
  
</div>
`;

exports[`basic client > rendering & text > renders semi-dynamic text 1`] = `
<div>
  <div>
    Hello World
  </div>
  
</div>
`;

exports[`basic client > rendering & text > renders simple JS expression logic correctly 1`] = `
<div>
  <div>
    {"0":"Test"}
  </div>
  <div>
    1
  </div>
  
</div>
`;

exports[`basic client > rendering & text > renders static text 1`] = `
<div>
  <div>
    Hello World
  </div>
  
</div>
`;

exports[`basic client > rendering & text > should handle lexical scopes correctly 1`] = `
<div>
  <section>
    Nested scope variable
  </section>
  
</div>
`;
